package com.datamasters.modelo;

public class ItemList {
}
