package com.datamasters.modelo;

public class List {
}
