package com.datamasters.vista;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class OnlineStore {

	public static void main(String[] args) {
		SpringApplication.run(OnlineStore.class, args);
	}

}
